Fix T63853: BLI_current_working_dir did not return utf8 encoding on windows.

When running blender in paths with special characters this caused issues.